objects/ssot__NetworkUsage__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>15</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Account</masterLabel>
            <refAttrDeveloperName>AccountId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssetId__c</fullName>
        <label>Asset</label>
        <length>15</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Asset</masterLabel>
            <refAttrDeveloperName>AssetId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AverageAvailabilityNumber__c</fullName>
        <label>Average Availability (%)</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Average Availability (%)</masterLabel>
            <refAttrDeveloperName>AverageAvailabilityNumber</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AverageCallDropRate__c</fullName>
        <label>Average Call Drop Rate (%)</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Average Call Drop Rate (%)</masterLabel>
            <refAttrDeveloperName>AverageCallDropRate</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AverageCallSetupSuccessRate__c</fullName>
        <label>Average Call Setup Success Rate (%)</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Average Call Setup Success Rate (%)</masterLabel>
            <refAttrDeveloperName>AverageCallSetupSuccessRate</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AverageErrorRate__c</fullName>
        <label>Average Error Rate (%)</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Average Error Rate (%)</masterLabel>
            <refAttrDeveloperName>AverageErrorRate</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AverageJitterNumber__c</fullName>
        <label>Average Jitter (ms)</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Average Jitter (ms)</masterLabel>
            <refAttrDeveloperName>AverageJitterNumber</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AverageLatencyNumber__c</fullName>
        <label>Average Latency (ms)</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Average Latency (ms)</masterLabel>
            <refAttrDeveloperName>AverageLatencyNumber</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AverageMeanOpinionScoreNumber__c</fullName>
        <label>Average Mean Opinion Score (MOS)</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Average Mean Opinion Score (MOS)</masterLabel>
            <refAttrDeveloperName>AverageMeanOpinionScoreNumber</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AveragePacketLossNumber__c</fullName>
        <label>Average Packet Loss (%)</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Average Packet Loss (%)</masterLabel>
            <refAttrDeveloperName>AveragePacketLossNumber</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AverageResponseTimeNumber__c</fullName>
        <label>Average Response Time (ms)</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Average Response Time (ms)</masterLabel>
            <refAttrDeveloperName>AverageResponseTimeNumber</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AverageThroughputDownloadNumber__c</fullName>
        <label>Average Throughput Download (bps)</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Average Throughput Download (bps)</masterLabel>
            <refAttrDeveloperName>AverageThroughputDownloadNumber</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AverageThroughputUploadNumber__c</fullName>
        <label>Average Throughput Upload (bps)</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Average Throughput Upload (bps)</masterLabel>
            <refAttrDeveloperName>AverageThroughputUploadNumber</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AverageTimeToRepairNumber__c</fullName>
        <label>Average Time To Repair (TTR)</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Average Time To Repair (TTR)</masterLabel>
            <refAttrDeveloperName>AverageTimeToRepairNumber</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Data Source</masterLabel>
            <refAttrDeveloperName>DataSourceId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Data Source Object</masterLabel>
            <refAttrDeveloperName>DataSourceObjectId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DestinationAddress__c</fullName>
        <label>Destination Address</label>
        <length>255</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Destination Address</masterLabel>
            <refAttrDeveloperName>DestinationAddress</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DurationNumber__c</fullName>
        <label>Duration</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Duration</masterLabel>
            <refAttrDeveloperName>DurationNumber</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DurationVolumeUOMId__c</fullName>
        <label>Duration Unit Of Measure</label>
        <length>15</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Duration Unit Of Measure</masterLabel>
            <refAttrDeveloperName>DurationVolumeUOMId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Network Usage Id</label>
        <length>15</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Network Usage Id</masterLabel>
            <primaryIndexOrder>1</primaryIndexOrder>
            <refAttrDeveloperName>Id</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Internal Organization</masterLabel>
            <refAttrDeveloperName>InternalOrganizationId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NetworkActivityType__c</fullName>
        <label>Network Activity Type</label>
        <length>15</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Network Activity Type</masterLabel>
            <refAttrDeveloperName>NetworkActivityType</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NetworkLocationName__c</fullName>
        <label>Network Location</label>
        <length>255</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Network Location</masterLabel>
            <refAttrDeveloperName>NetworkLocationName</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NetworkUsageEndDateTime__c</fullName>
        <label>Network Usage End Date Time</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Network Usage End Date Time</masterLabel>
            <refAttrDeveloperName>NetworkUsageEndDateTime</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__NetworkUsageStartDateTime__c</fullName>
        <label>Network Usage Start Date Time</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Network Usage Start Date Time</masterLabel>
            <refAttrDeveloperName>NetworkUsageStartDateTime</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__NetworkUsage_AssetId_map_Asset_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NetworkUsage_AssetId_map_Asset_Id_N_1</label>
        <referenceTo>ssot__Asset__dlm</referenceTo>
        <relationshipLabel>NetworkUsage_AssetId_map_Asset_Id_N_1</relationshipLabel>
        <relationshipName>NetworkUsage_AssetId_map_Asset_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__ProtocolName__c</fullName>
        <label>Protocol</label>
        <length>255</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Protocol</masterLabel>
            <refAttrDeveloperName>ProtocolName</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceAddress__c</fullName>
        <label>Source Address</label>
        <length>255</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Source Address</masterLabel>
            <refAttrDeveloperName>SourceAddress</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UsageVolumeNumber__c</fullName>
        <label>Usage Volume</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Usage Volume</masterLabel>
            <refAttrDeveloperName>UsageVolumeNumber</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__UsageVolumeUOMId__c</fullName>
        <label>Usage Volume Unit Of Measure</label>
        <length>15</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Usage Volume Unit Of Measure</masterLabel>
            <refAttrDeveloperName>UsageVolumeUOMId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720283030236_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NetworkUsage_DurationVolumeUOMId_map_rel</label>
        <referenceTo>ssot__UnitOfMeasure__dlm</referenceTo>
        <relationshipLabel>NetworkUsage_DurationVolumeUOMId_map_rel</relationshipLabel>
        <relationshipName>rel_1720283030236_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720283032059_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NetworkUsage_UsageVolumeUOMId_map_Un_rel</label>
        <referenceTo>ssot__UnitOfMeasure__dlm</referenceTo>
        <relationshipLabel>NetworkUsage_UsageVolumeUOMId_map_Un_rel</relationshipLabel>
        <relationshipName>rel_1720283032059_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291043350_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NetworkUsage_AccountId_map_Account_I_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>NetworkUsage_AccountId_map_Account_I_rel</relationshipLabel>
        <relationshipName>rel_1720291043350_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <mktDataModelAttributes>
        <creationType>Standard</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>false</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <masterLabel>Network Usage</masterLabel>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Unassigned</objectCategory>
        <referenceEntityGroup>Asset</referenceEntityGroup>
        <referenceEntityName>NetworkUsage</referenceEntityName>
        <referenceEntitySubjectArea>Asset</referenceEntitySubjectArea>
    </mktDataModelAttributes>
</CustomObject>